--- a/_config.yml
+++ b/_config.yml
@@ -25,21 +25,9 @@ author:
   avatar           : "profile.png"
   name             : "Mingzhe Zhang 张铭哲"
   pronouns         : # example: "she/her"  
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
-
-  # Academic websites
-  academia         : # URL
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  location         : "Heilongjiang"
+  employer         : "Beihang University"
+  email            : "21377319@buaa.edu.cn" 
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
